--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -1,7 +1,10 @@
 name: Latest blog post workflow every hour
 on:
-    schedule:
-        - cron: '0 0 * * *'
+# Schedule updates (each hour)
+    schedule: [{cron: "0 * * * *"}]
+    # Lines below let you run workflow manually and on each commit
+    workflow_dispatch:
+    push: {branches: ["master", "main"]}
 jobs:
     update-readme-with-blog:
         name: Update this repo's README with latest blog posts
