--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -9,6 +9,8 @@ jobs:
     update-readme-with-blog:
         name: Update this repo's README with latest blog posts
         runs-on: ubuntu-latest
+        permissions:
+            contents: write
         steps:
             - uses: actions/checkout@v2
             - uses: gautamkrishnar/blog-post-workflow@master
