--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -16,4 +16,4 @@ jobs:
             - uses: gautamkrishnar/blog-post-workflow@master
               with:
                 max_post_count: "3"
-                feed_list: "https://qrxnz.dev/index.xml"
+                feed_list: "https://blog.qrxnz.dev/index.xml"
